2008-02-17 Marc Noirot <marc.noirot@gmail.com>
	* amf.c, amf.h, flvmeta.c, flvdump.c: Cleaned up the AMF
	  serializer/deserializer by using a callback-based mechanism to make
	  the code backend-independant (backported from the trunk).

2008-01-04 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.4 Release.
	
	* flvmeta.c (get_flv_info, write_flv): Data tags occuring before the first
	  audio or video tag were not written into the output file.
	
	* all source files: Fixed copyright strings.

2008-01-03 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (compute_metadata): Fixed a date bug where the
	  daylight static variable obtained from tzset() was used
	  to compute UTC times.
	
	* flvdump.c: Fixed flvdump so it will report garbage bytes in the
	  metadata tags, and be more tolerant with malformed files.

2007-10-21 Marc Noirot <marc.noirot@gmail.com>
	* 1.0.3 Release.

2007-10-11 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (inject_metadata): Output file is only
	  opened after input file reading succeeded.

2007-10-10 Marc Noirot <marc.noirot@gmail.com>
	* types.h, types.c: Transformed most conversion functions
	  into macros, to improve execution speed.

	* amf.c (amf_data_decode, amf_data_encode):
	  Fixed missing break statements.
	
	* amf.c (amf_string_encode): Forgot to count
	  the string length prefix size.

2007-10-05 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (compute_vp6_alpha_size): Fixed read check.
	
	* flvmeta.c (get_flv_info): Added a file reading check
	  that had been forgotten.
	
	* flvmeta.c: A few small fixes.

2007-09-30 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac: 1.0.2 Release.
	
	* configure.ac, config.h.win, types.h, types.c:
	  Fixed integer and float size checking, as well as endianness
	  checking. This fixes issues on 64-bits architectures.
	
	* flvdump.c (main): Fixed printf type specifiers.
	
	* flvmeta.c (get_flv_info): Fixed "times" metadata tag,
	  which was incorrectly written as "timestamps".
	